--- a/index.html
+++ b/index.html
@@ -27,22 +27,36 @@
                             <label for="dateTodo">Date</label><br>
                             <input id="dateTodo" type="date" placeholder="" name="dateTodo" required><br>
 
-                            <button type="submit"><b>+ Create Tags</b></button>
+                            <div id="submitTodo" type="submit"><b>+ Create Tags</b></div>
                         </form>
                         <hr>
                     </section>
-                    <section id="addTodo">
+<!--                     <label class="addTodo" for="centang" >
                         <section id="checkboxTodo">
-                            <input type="checkbox" name="">
+                            <input type="checkbox" id="centang">
                         </section>
                         <section id="textTodo">
                             <p id="textTitle"> Coding</p>
                             <p id="textDate">12/12/2022</p>
                         </section>
                         <section id="deleteTodo">
-                            <p id="textDeleteTodo">DELETE</p>
+                            <p class="textDeleteTodo">DELETE</p>
                         </section>
-                    </section>
+                    </label> -->
+<!--                     `<label class="addTodo" for='centang' onclick='toggle(this)' >
+                        <section id='checkboxTodo'>
+                            <input id="centang" type='checkbox'>
+                        </section>
+                        <section id='textTodo'>
+                            <p id='textTitle'> ${inputNameTodo.value}</p>
+                            <p id='textDate'>${inputDateTodo.value}</p>
+                        </section>
+                        <section id='deleteTodo'>
+                            <p class='textDeleteTodo'>DELETE</p>
+                        </section>
+                    </label>` -->
+                    <div id="containerTODOLIST">
+                    </div>
                 </div>
             </div>
         </div>
